# qt-opencv-cmake

./: CMakeLists.txt  brewlist.txt  mainwindow.h
